# xrinput

./: README.md  pyproject.toml
examples/: advanced.py  all_api.py  base.py  base_use.py  demo.py  drag_object.py  drag_object2x.py  drag_use.py  panel_use.py  pub_msg.py  pub_use.py  sub_msg.py  viz_use.py
src/xrinput/: __init__.py  config.py  core.py  filters.py  panel.py  pose_mapper.py  reader.py  runtime.py  utils.py  visualizer.py  zmq_pub.py  zmq_sub.py
src/xrinput/comm/: zmq_sub.py
src/xrinput/core/: xr_core.py  xr_reader.py  xr_runtime.py
src/xrinput/monitor/: log.py  panel.py
src/xrinput/processing/: box3d.py  filters.py  pose_mapper.py  pose_transform.py
